--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>coalitiemaker</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
