--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,27 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- OG Tags -->
+    <meta property="og:title" content="Coalitiemaker" />
+    <meta property="og:site_name" content="Coalitiemaker" />
+
+    <!-- for Google -->
+    <meta name="description" content="Coalitiemaker maakt de mogelijke coalities in de Nederlandse Tweede Kamer inzichtelijk. " />
+    <meta name="author" content="Coalitiemaker" />
+    <meta name="copyright" content="Coalitiemaker" />
+
+    <!-- for Facebook -->
+    <meta property="og:image" content="http://coalitiemaker.nl/share.png" />
+    <meta property="og:url" content="http://coalitiemaker.nl/" />
+    <meta property="og:description" content="Coalitiemaker maakt de mogelijke coalities in de Nederlandse Tweede Kamer inzichtelijk. " />
+
+    <!-- for Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Coalitiemaker" />
+    <meta name="twitter:description" content="Coalitiemaker maakt de mogelijke coalities in de Nederlandse Tweede Kamer inzichtelijk. " />
+    <meta name="twitter:image" content="http://coalitiemaker.nl/share.jpg" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
